--- a/2P/Practice 5 - Logistic Regression.ipynb
+++ b/2P/Practice 5 - Logistic Regression.ipynb
@@ -20,7 +20,7 @@
     "    - Diagnosis column is the value to be predicted\n",
     "2. Divide the dataset in training set (90%) and test set (10%) ensuring to shuffle them and fixing random_state as zero\n",
     "3. Using the training set train a logistic regression model\n",
-    "4. Using the generated model classify the test data"
+    "4. Use the generated model to classify the test data"
    ]
   },
   {
